--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,18 @@
         <title></title>
    
     <body>
-        <a href = "/login">login</a>  
+        <h1></h1>
+        <form method="POST">
+        <h2>Enter username and password to move emails</h2>
         
-</form></body>
+       
+        username <input type = "text" name="username">
+        password <input type = "text" name="password">
+        <input type="submit">
+    </form>
+      <!--  <a href = "/login">login</a>   -->
+     
+</body>
    
        
 </html>
